more Feature Added in  online consultancy

--- a/src/app/core/modal/modal.component.css
+++ b/src/app/core/modal/modal.component.css
@@ -48,10 +48,28 @@
 }
 .book-package-modal .modal .modal-body
 {
-    max-height: 470px;
+    max-height: 530px;
     overflow-y: scroll;
 }
 .book-package-modal .modal-footer button
 {
   padding: 10px 20px;
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px)
+{
+  .modal
+  {
+    width: 90%;
+  }
+  .book-package-modal .modal .modal-body
+  {
+    max-height: 760px;
+  }
+}
+@media screen and (max-width: 767px)
+{
+  .modal
+  {
+    width: 90%;
+  }
 }
