--- a/src/app/core/modal/modal.component.html
+++ b/src/app/core/modal/modal.component.html
@@ -10,8 +10,8 @@
     <div class="modal-body">
       <ng-content></ng-content>
     </div>
-    <div class="modal-footer justify-content-start">
+    <!-- <div class="modal-footer justify-content-start">
       <button type="submit" class="btn-default">Send <i class="fa-solid fa-arrow-up"></i></button>
-    </div>
+    </div> -->
   </div>
 </div>
