--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,7 +1,7 @@
 <section class="inner-banner">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="inner-baner-dtl position-relative text-center">
                     <!-- Banner Image -->
                     <img [src]="'assets/images/about.png'" class="w-100 img-fluid rounded-5" />
@@ -21,7 +21,7 @@
 <section class="about-us about-main ptc-80">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="about-details">
                     <p class="sub-head">About Us</p>
                     <h2>Why You Choose <br> Medical Tourism</h2>
@@ -35,7 +35,7 @@
                         centuries.</p>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <img [src]="'assets/images/about1.png'" class="img-fluid w-100">
             </div>
         </div>
@@ -44,12 +44,12 @@
 <section class="oue-vision position-relative mtc-80">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-5">
+            <div class="col-lg-5">
                 <div class="about-vision">
                     <img [src]="'assets/images/about-vision.png'" class="img-fluid">
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
                 <div class="vision-detail about-details">
                     <h2>Lorem Ipsum <br>Medical Tourism</h2>
                     <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -81,13 +81,13 @@
 <section class="about-feture ptc-80">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="about-feture-head about-details ps-0">
                     <h2>Professionals dedicated to your health</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.</p>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="about-feture-list">
                     <ul class="mb-0">
                         <li><img [src]="'assets/images/features-check.svg'"><span>Lorem Ipsum is simply dummy text of the printing and typeing.</span></li>
@@ -100,13 +100,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="about-feture-main position-relative">
                     <img [src]="'assets/images/about-5.png'" class="img-fluid w-100 rounded-5">
                     <div class="about-feture-info">
                         <div class="about-feture-info-main">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-lg-4">
                                     <div class="about-feture-dtl d-flex align-items-center">
                                         <img [src]="'assets/images/doctor-expert.svg'">
                                         <div class="about-feture-inner">
@@ -115,7 +115,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-lg-4">
                                     <div class="about-feture-dtl d-flex align-items-center">
                                         <img [src]="'assets/images/support.svg'">
                                         <div class="about-feture-inner">
@@ -124,7 +124,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-lg-4">
                                     <div class="about-feture-dtl d-flex align-items-center">
                                         <img [src]="'assets/images/happy-patient.svg'">
                                         <div class="about-feture-inner">
@@ -144,7 +144,7 @@
 <section class="about-option ptc-80">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 <div class="main-head text-center mbc-50">
                     <h2>Professionals dedicated to <br>your health</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
@@ -152,21 +152,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="about-option-inner">
                     <img [src]="'assets/images/equipment.svg'">
                     <h6>Modern Equipment</h6>
                     <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. When an unknown printer.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="about-option-inner">
                     <img [src]="'assets/images/highly-doctor.svg'">
                     <h6>Highly Qualified Doctor</h6>
                     <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. When an unknown printer.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="about-option-inner">
                     <img [src]="'assets/images/treatment.svg'">
                     <h6>Pain - Free Treatment</h6>
@@ -179,7 +179,7 @@
 <section class="we-offer ptc-80">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>Our Partner Hospital</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -190,7 +190,7 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <img [src]="'assets/images/hospital-logo.png'" class="img-fluid w-100">
                 </div>
             </div>
@@ -199,7 +199,7 @@
     <section class="we-offer ptc-80">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>Patient Stories Of Care And Recovery</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -208,7 +208,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <div class="client-feedback">
                         <owl-carousel-o [options]="customOptions">
                             <ng-template carouselSlide>
