--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -6,19 +6,19 @@
     <section class="banner-services ptc-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="banner-offer">
                         <img [src]="'assets/images/cancer.svg'">
                         <p>Cancer Treatment <br>In India</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="banner-offer">
                         <img [src]="'assets/images/nephrology.svg'">
                         <p>Nephrology Treatment <br>In India</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-4">
                     <div class="banner-offer">
                         <img [src]="'assets/images/stem-cell.svg'">
                         <p>Stem Cell Therapy <br>In India</p>
@@ -31,10 +31,10 @@
     <section class="about-us ptc-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <img [src]="'assets/images/about-us.png'" class="img-fluid w-100">
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="about-details">
                         <h2>Why You Choose <br> Medical Tourism</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -54,7 +54,7 @@
     <section class="we-offer ptc-80">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>What We Offer</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="offer-box position-relative">
                         <img [src]="'assets/images/offer1.png'" class="rounded-4 img-fluid">
                         <div class="offer-info">
@@ -78,7 +78,7 @@
                         <a href="#" class="offer-detail-btn"><img [src]="'assets/images/offer-link.svg'"></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="offer-box position-relative">
                         <img [src]="'assets/images/offer2.png'" class="rounded-4 img-fluid">
                         <div class="offer-info">
@@ -93,7 +93,7 @@
                         <a href="#" class="offer-detail-btn"><img [src]="'assets/images/offer-link.svg'"></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="offer-box position-relative">
                         <img [src]="'assets/images/offer3.png'" class="rounded-4 img-fluid">
                         <div class="offer-info">
@@ -114,7 +114,7 @@
     <section class="packages ptc-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <div class="packages-head d-flex align-items-center justify-content-between mbc-40">
                         <h2 class="mb-0">Our Packages</h2>
                         <a href="#" class="btn-default">View All <i class="fa-solid fa-arrow-up"></i></a>
@@ -122,9 +122,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-lg-8">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="package-box position-relative">
                                 <div class="package-title d-flex align-items-center">
                                     <img [src]="'assets/images/packages1.svg'">
@@ -136,7 +136,7 @@
                                 <a href="#"><img [src]="'assets/images/packages-detail.svg'"></a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="package-box position-relative">
                                 <div class="package-title d-flex align-items-center">
                                     <img [src]="'assets/images/packages2.svg'">
@@ -148,7 +148,7 @@
                                 <a href="#"><img [src]="'assets/images/packages-detail.svg'"></a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="package-box position-relative">
                                 <div class="package-title d-flex align-items-center">
                                     <img [src]="'assets/images/packages3.svg'">
@@ -160,7 +160,7 @@
                                 <a href="#"><img [src]="'assets/images/packages-detail.svg'"></a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6 col-md-6">
                             <div class="package-box position-relative">
                                 <div class="package-title d-flex align-items-center">
                                     <img [src]="'assets/images/packages4.svg'">
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <img [src]="'assets/images/packages-main.png'" class="img-fluid w-100 rounded-4 mt-2">
                 </div>
             </div>
@@ -183,10 +183,10 @@
     <section class="web-info ptc-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <img [src]="'assets/images/info-image.png'" class="img-fluid w-100 rounded-4">
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="info-detail">
                         <h4>Lorem Ipsum Is <br> Dummy Text Of The Printing</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -220,7 +220,7 @@
     <section class="we-offer ptc-80">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>Our Partner Hospital</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -231,7 +231,7 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <img [src]="'assets/images/hospital-logo.png'" class="img-fluid w-100">
                 </div>
             </div>
@@ -240,7 +240,7 @@
     <section class="we-offer ptc-80">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>Patient Stories Of Care And Recovery</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <div class="client-feedback">
                         <owl-carousel-o [options]="customOptions">
                             <ng-template carouselSlide>
