--- a/src/app/pages/hospital-detail/hospital-detail.html
+++ b/src/app/pages/hospital-detail/hospital-detail.html
@@ -1,7 +1,7 @@
 <section class="inner-banner" *ngIf="hospital">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="inner-baner-dtl position-relative text-center">
                     <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[1].url"
                         class="w-100 img-fluid rounded-5 banner-img" [alt]="hospital.name" />
@@ -25,13 +25,13 @@
 <section class="hospital-detail ptc-80" *ngIf="hospital">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detail-image">
                     <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[0].url"
                         class="img-fluid w-100" [alt]="hospital.name" />
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="dtl-info hospital-info">
                     <h2 class="section-title">{{ hospital.name }}</h2>
                     <div class="detail-location d-flex align-items-center card-location">
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="detail-info">
                     <div class="dtl-head">
                         <h2>Lorem ipsum is simply dummy text</h2>
@@ -67,14 +67,14 @@
 <section class="facilities ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="dtl-head">
                     <h2>Facilities :-</h2>
                 </div>
             </div>
         </div>
         <div class="row" *ngIf="hospital?.facilities">
-            <div class="col-md-3" *ngFor="let facility of hospital.facilities.split('\n'); let i = index">
+            <div class="col-lg-3 col-md-6" *ngFor="let facility of hospital.facilities.split('\n'); let i = index">
                 <div class="facility-item d-flex align-items-center justify-content-center">
                     <img [src]="facilityIcons[i] || 'assets/images/facilities/default.png'" alt="facility {{ i + 1 }}"
                         class="img-fluid" />
@@ -87,14 +87,14 @@
 <section class="facilities ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="dtl-head">
                     <h2>Key Features :-</h2>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div *ngIf="hospital?.features" class="dtl-features-list">
                     <ul class="list-unstyled mb-0">
                         <li *ngFor="let feature of hospital.features.split('\n')">
@@ -110,11 +110,11 @@
 <section class="dtl-center-image ptc-60" *ngIf="hospital">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-6">
                 <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[2].url"
                         class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-6">
                 <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[3].url"
                         class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
             </div>
@@ -124,7 +124,7 @@
 <section class="faq-main ptc-80">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="dtl-faq">
                     <div class="faq-head">
                         <p>Frequently Asked Questions</p>
@@ -216,50 +216,68 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="detail-doctors">
                     <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                         <h4>Top Doctors</h4>
-                        <a href="#">View All</a>
+                        <a href="/doctors">View All</a>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
+                    
+                    <!-- Loading state -->
+                    <div *ngIf="loadingDoctors" class="text-center py-3">
+                        <div class="spinner-border spinner-border-sm" role="status">
+                            <span class="visually-hidden">Loading doctors...</span>
+                        </div>
+                        <p class="mt-2 mb-0">Loading hospital doctors...</p>
+                    </div>
+                    
+                    <!-- Dynamic doctor list -->
+                    <div *ngFor="let doctor of hospitalDoctors" class="dtl-doctor-list d-flex align-items-center">
                         <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">            
+                            <img *ngIf="doctor.profile_photo" 
+                                 [src]="baseUrl + doctor.profile_photo" 
+                                 [alt]="doctor.name" 
+                                 class="img-fluid">
+                            <img *ngIf="!doctor.profile_photo" 
+                                 [src]="'assets/images/dtl-doctor.png'" 
+                                 class="img-fluid">
                         </div>
                         <div class="dtl-doctor-info">
-                            <p>Dr. Prof Raju Vaishya</p>
+                            <p>{{ doctor.name }}</p>
                             <ul>
-                                <li>Orthopaedic Surgeon</li>
-                                <li>35 Years of Experience</li>
+                                <li>{{ doctor.designation || doctor.specialization }}</li>
+                                <li *ngIf="doctor.experience_years">{{ doctor.experience_years }} Years of Experience</li>
+                                <li *ngIf="!doctor.experience_years && doctor.consultancy_fee">Consultation Fee: ₹{{ doctor.consultancy_fee | number }}</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">            
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Dr. Prof Raju Vaishya</p>
-                            <ul>
-                                <li>Orthopaedic Surgeon</li>
-                                <li>35 Years of Experience</li>
-                            </ul>
-                        </div>
+                    
+                    <!-- No doctors found -->
+                    <div *ngIf="!loadingDoctors && hospitalDoctors.length === 0" class="text-center py-3">
+                        <p class="mb-0 text-muted">No doctors available at this time.</p>
+                        <small class="text-muted">Please check back later or contact us for more information.</small>
+                    </div>
+                    
+                    <!-- Debug info (remove in production) -->
+                    <div *ngIf="!loadingDoctors" class="mt-2" style="font-size: 12px; color: #666;">
+                        <small>Debug: {{ hospitalDoctors.length }} doctors loaded</small>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 <section class="dtl-cta ptc-80">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="dtl-cta-main position-relative">
                     <img [src]="'assets/images/dtl-cta.jpg'" class="img-fluid w-100 rounded-4">
                     <div class="dtl-cta-action">
                         <h2>Take the first step to <br> better health</h2>
-                        <a href="#" class="btn-default">Talk To Our Experts Now <i class="fa-solid fa-arrow-up"></i></a>
+                        <a href="/contact" class="btn-default">Talk To Our Experts Now <i
+                                class="fa-solid fa-arrow-up"></i></a>
                     </div>
                 </div>
             </div>
