--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <!-- About Section -->
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="footer-about pe-4">
           <h2>LOGO</h2>
           <p>
@@ -18,9 +18,9 @@
         </div>
       </div>
 
-      <div class="col-md-5">
+      <div class="col-lg-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-6">
                 <h4 class="footer-head">Links</h4>
                 <div class="footer-link">
                     <ul class="ps-3 mb-0">
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 col-6">
                 <h4 class="footer-head">Services</h4>
                 <div class="footer-link">
                     <ul class="ps-3 mb-0">
@@ -43,7 +43,7 @@
         </div>
       </div>
       <!-- Quick Links -->
-      <div class="col-md-3">
+      <div class="col-lg-3">
         <div class="footer-news">
             <h4 class="footer-head">Newsletter</h4>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
