--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -41,6 +41,7 @@
 .login-btn {
     padding: 10px 22px;
     font-size: 14px;
+    display: block;
 }
 
 .banner-offer {
@@ -162,7 +163,7 @@
 }
 
 .packages-head a.btn-default {
-    padding: 8px 20px;
+    padding: 8px 15px;
 }
 
 .package-title h5 {
@@ -374,7 +375,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top;
     border-radius: 15px;
 }
 
@@ -528,7 +528,10 @@
 }
 
 .dtl-doctor-img img {
-    max-width: 93px;
+    width: 93px;
+    height: 93px;
+    object-fit: cover;
+    object-position: center;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
@@ -603,7 +606,10 @@
     width: 22px;
 }
 
-.blog-card-dtl h4 {
+.blog-card-dtl h4,
+.blog-card-dtl .blog-dtl p strong
+{
+    font-weight: 500;
     font-size: 20px;
     font-family: var(--primary-font);
 }
@@ -754,4 +760,720 @@
 {
     width: 100%;
     text-align: center;
+}
+.custom-submit
+{
+    width: fit-content;
+}
+.contact-form img
+{
+    max-height: 587px;
+    object-fit: cover;
+}
+.blog-card-dtl .blog-dtl ul
+{
+    padding-left: 0px;
+}
+.blog-card-dtl .blog-dtl ul li
+{
+    list-style-type: none;
+    padding: 0px;
+    position: relative;
+  padding-left: 35px; /* space for svg */
+  margin-bottom: 12px;
+}
+.blog-card-dtl .blog-dtl ul li:last-child
+{
+    margin-bottom: 0px;
+}
+.blog-card-dtl .blog-dtl ul li::before
+{
+    content: "";
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 20px;
+  height: 20px;
+  background: url("../images/features-check.svg") no-repeat center center;
+  background-size: contain;
+}
+.detail-image img
+{
+    max-height: 400px;
+    object-fit: cover;
+}
+.tret-filter-main
+{
+    justify-content: space-between;
+}
+.tret-filter h4
+{
+    color: #464646;
+    font-family: var(--primary-font);
+}
+.filter-option select
+{
+    color: #AEAEAE;
+    padding: 10px 35px 10px 10px;
+    min-width: 200px;
+}
+.tret-filter-main
+{
+    margin-bottom: 40px;
+}
+.filter-main .filter-item
+{
+    width: 50%;
+}
+.privacy-main h2
+{
+    color: #151515;
+    margin-bottom: 15px;
+    font-family: var(--primary-font);
+}
+.privacy-detail h4
+{
+    font-size: 20px;
+    color: #151515;
+}
+.privacy-detail p
+{
+    color: var(--info-color);
+}
+.privacy-detail ul
+{
+    padding-left: 20px;
+}
+.privacy-detail ul li
+{
+    margin: 10px 0px;
+}
+.attraction-main .detail-doctors.recent-post
+{
+    margin-left: 0px;
+}
+/* responsive start */
+@media only screen and (min-width: 768px) and (max-width: 1024px)
+{
+    .hero-content h2
+    {
+        font-size: 1.5rem;
+    }
+    .banner-offer
+    {
+        padding: 20px 10px;
+    }
+    .about-us img
+    {
+        margin-bottom: 30px;   
+    }
+    .about-details h2
+    {
+        font-size: 28px;
+    }
+    .about-details h2 br
+    {
+        display: none;
+    }
+    .ptc-80
+    {
+        padding-top: 55px;
+    }
+    .about-details
+    {
+        padding-left: 0px;
+    }
+    .offer-box
+    {
+        margin-bottom: 25px;
+    }
+    .attraction-main .detail-doctors.recent-post
+    {
+        margin-top: 0px;
+        margin-bottom: 20px;
+    }
+    .offer-box img
+    {
+        width: 100%;
+    }
+    .offer-box a.offer-detail-btn img
+    {
+        width: 40px;
+    }
+    .packages-head h2,
+    .main-head h2
+    {
+        font-size: 28px;
+    }
+    .btn-default
+    {
+        font-size: 16px;
+    }
+    .mbc-40
+    {
+        margin-bottom: 25px;
+    }
+    .info-detail
+    {
+        padding: 20px;
+        margin-top: 25px;
+    }
+    .footer-main
+    {
+        padding: 40px 0px;
+        margin-top: 55px !important;
+    }
+    .mbc-50
+    {
+        margin-bottom: 35px;
+    }
+    .footer-about
+    {
+        margin-bottom: 30px;
+        padding-right: 0px !important;
+    }
+    .footer-news
+    {
+        margin-top: 30px;
+    }
+    .banner-offer img
+    {
+        width: 60px;
+    }
+    .inner-heading h2
+    {
+        font-size: 30px;
+    }
+    .breadcumb
+    {
+        padding-left: 0px;
+    }
+    .rounded-5
+    {
+        border-radius: 1.4rem !important;
+    }
+    .inner-heading
+    {
+        border-radius: 20px;
+    }
+    .about-us.about-main img
+    {
+        margin-top: 25px;
+        margin-bottom: 0px;
+    }
+    .oue-vision
+    {
+        padding: 0px !important;
+    }
+    .privacy-main h2
+    {
+        font-size: 22px;
+    }
+    .about-back
+    {
+        display: none;
+    }
+    .vision-detail.about-details
+    {
+        margin-top: 25px;
+    }
+    .about-feture-list ul
+    {
+        padding-left: 0px;
+    }
+    .main-head h2 br
+    {
+        display: none;
+    }
+    .about-option-inner img
+    {
+        width: 60px;
+    }
+    .about-option-inner
+    {
+        margin-bottom: 20px;
+    }
+    .tret-filter-main
+    {
+        flex-wrap: wrap;
+    }
+    .tret-filter
+    {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .dtl-info
+    {
+        padding-left: 0px;
+        margin-top: 20px;
+    }
+    .dtl-info h2
+    {
+        font-size: 26px;
+    }
+    .treatment-price
+    {
+        margin: 5px 0px;
+    }
+    .dtl-cta-action h2
+    {
+        font-size: 24px;
+    }
+    .inner-baner-dtl img.banner-img
+    {
+        max-height: 250px;
+        min-height: 250px;
+    }
+    .login-btn
+    {
+        margin-left: 0px !important;
+        display: block;
+        width: fit-content;
+        margin-top: 15px
+    }
+    .detail-info
+    {
+        padding-top: 30px;
+    }
+    .dtl-head h2
+    {
+        font-size: 24px;
+    }
+    .ptc-60
+    {
+        padding-top: 40px;
+    }
+    .faq-head h4
+    {
+        font-size: 26px;
+    }
+    .detail-doctors
+    {
+        margin-left: 0px;
+        margin-top: 20px;
+        padding: 20px 0px;
+    }
+    .dtl-doctor-head h4
+    {
+        font-size: 24px;
+    }
+    .dtl-doctor-img img
+    {
+        height: 75px;
+    }
+    .blog-dtl h2,
+    .blog-dtl h3
+    {
+        font-size: 20px;
+    }
+    .contact-inner
+    {
+        height: auto;
+        margin-bottom: 20px;
+        justify-content: flex-start;
+    }
+    .contact-form-inner
+    {
+        margin-top: 30px;
+    }
+    .login-form,
+    .contact-form.login-form .contact-form-inner
+    {
+        height: initial;
+    }
+    .contact-form-inner h5
+    {
+        margin-bottom: 25px;
+    }
+}
+@media screen and (max-width: 767px)
+{
+    .ptc-80
+    {
+        padding-top: 50px;
+    }
+    .banner-offer
+    {
+        margin: 10px 0px;
+    }
+    .banner-offer p
+    {
+        font-size: 16px;
+    }
+    .banner-offer img
+    {
+        width: 70px;
+    }
+    .about-us img
+    {
+        margin-bottom: 30px;
+    }
+    .about-details
+    {
+        padding-left: 0px;
+    }
+    .contact-form-inner h5
+    {
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+    .contact-form img
+    {
+        max-height: 390px;
+    }
+    .about-details h2
+    {
+        font-size: 26px;
+    }
+    .about-details .btn-default
+    {
+        padding: 10px 15px;
+        font-size: 16px;
+    }
+    .main-head h2
+    {
+        font-size: 26px;
+    }
+    .main-head p
+    {
+        font-size: 14px;
+    }
+    .mbc-50
+    {
+        margin-bottom: 30px;
+    }
+    .rounded-4
+    {
+        border-radius: 0.7rem !important;
+    }
+    .offer-info
+    {
+        padding: 15px 10px;
+        border-radius: 0px 0px 10px 10px;
+    }
+    .offer-info h4
+    {
+        font-size: 20px;
+    }
+    .offer-tag
+    {
+        gap: 7px;
+    }
+    .offer-tag span.badge
+    {
+        font-size: 10px;
+    }
+    .offer-box
+    {
+        margin-bottom: 20px;
+    }
+    .packages-head h2
+    {
+        font-size: 24px;
+    }
+    .btn-default
+    {
+        font-size: 16px;
+    }
+    .mbc-40
+    {
+        margin-bottom: 25px;
+    }
+    .package-title h5
+    {
+        font-size: 18px;
+    }
+    .package-title img
+    {
+        width: 35px;
+    }
+    .info-detail
+    {
+        padding: 20px;
+        margin-top: 30px;
+    }
+    .info-detail h4
+    {
+        font-size: 24px;
+    }
+    .counters-main
+    {
+        gap: 30px;
+        flex-wrap: wrap;
+    }
+    .counter img
+    {
+        width: 55px;
+    }
+    .web-info .counter h1
+    {
+        font-size: 30px;
+    }
+    .footer-main
+    {
+        padding: 40px 0px !important;
+        margin-top: 50px !important;
+    }
+    .footer-head
+    {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+    .footer-about
+    {
+        padding-right: 0px !important;
+        margin-bottom: 30px;
+    }
+    .footer-news
+    {
+        margin-top: 15px;
+    }
+    .navbar
+    {
+        padding: 0.2rem 0 !important;
+    }
+    .login-btn
+    {
+        margin-left: 0px !important;
+        margin-top: 20px;
+        display: block;
+        width: fit-content;
+    }
+    .inner-heading h2
+    {
+        font-size: 22px;
+        margin-bottom: 0px;
+    }
+    .inner-baner-dtl ul.breadcumb li a
+    {
+        font-size: 12px;
+    }
+    .breadcumb
+    {
+        margin-bottom: 0px;
+        gap: 0.5rem !important;
+        padding-left: 0px !important;
+    }
+    .inner-baner-dtl img
+    {
+        width: 8px;
+        border-radius: 15px !important;
+    }
+    .inner-heading
+    {
+        border-radius: 15px;
+    }
+    .mtc-80
+    {
+        margin-top: 50px;
+    }
+    .about-vision
+    {
+        margin-bottom: 25px;
+    }
+    .oue-vision
+    {
+        padding: 0px;
+    }
+    .about-us.about-main img
+    {
+        margin-bottom: 0px;
+        margin-top: 20px;
+    }
+    .vision-main
+    {
+        flex-wrap: wrap;
+    }
+    .vision-main img
+    {
+        margin-bottom: 10px;
+    }
+    .about-back
+    {
+        display: none;
+    }
+    .about-feture-list ul
+    {
+        padding-left: 0px;
+    }
+    .rounded-5
+    {
+        border-radius: 0.8rem !important;
+    }
+    .main-head h2 br
+    {
+        display: none;
+    }
+    .about-option-inner
+    {
+        border-radius: 15px;
+        margin: 10px 0px;
+    }
+    .about-main .about-details
+    {
+        padding-right: 0px !important;
+    }
+    .tret-filter-main
+    {
+        flex-wrap: wrap;
+    }
+    .tret-filter h4
+    {
+        margin-bottom: 15px !important;
+    }
+    .filter-option
+    {
+        flex-wrap: wrap;
+    }
+    .treatment-price
+    {
+        font-size: 16px;
+        margin: 5px 0px;
+    }
+    .inner-baner-dtl img.banner-img
+    {
+        max-height: 180px;
+        min-height: 180px;
+    }
+    .dtl-info
+    {
+        padding-left: 0px;
+        margin-top: 15px;
+    }
+    .dtl-info h2
+    {
+        font-size: 26px;
+    }
+    .dtl-head h2
+    {
+        font-size: 24px;
+    }
+    .dtl-center-image img
+    {
+        height: 220px;
+        margin-bottom: 20px;
+    }
+    .faq-head h4
+    {
+        font-size: 24px;
+    }
+    .accordion-main h2 button
+    {
+        font-size: 16px;
+    }
+    .accordion-main .accordion-body p
+    {
+        font-size: 14px;
+    }
+    .detail-doctors
+    {
+        margin-top: 20px;
+        padding: 20px 0px;
+        margin-left: 0px;
+    }
+    .dtl-doctor-info p
+    {
+        font-size: 16px;
+    }
+    .dtl-doctor-info
+    {
+        padding-left: 15px;
+    }
+    .dtl-doctor-img img
+    {
+        width: 75px;
+        height: 75px;
+        border-radius: 6px;
+    }
+    .dtl-cta-action h2
+    {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    .dtl-cta-action a.btn-default
+    {
+        font-size: 12px;
+        padding: 6px 10px;
+    }
+    .btn-default i
+    {
+        margin-left: 5px;
+    }
+    .detail-info
+    {
+        padding-top: 30px;
+    }
+    .user-card-img
+    {
+        height: 170px;
+    }
+    .user-card-img img
+    {
+        object-position: initial;
+    }
+    .ptc-60
+    {
+        padding-top: 30px;
+    }
+    .dtl-doctor-head h4
+    {
+        font-size: 22px;
+        margin-bottom: 0px;
+    }
+    .dtl-doctor-head
+    {
+        flex-wrap: wrap;
+        padding: 0px 15px;
+    }
+    .blog-card-dtl h4, .blog-card-dtl .blog-dtl p strong
+    {
+        font-size: 18px;
+    }
+    .blog-card-dtl
+    {
+        padding: 10px;
+    }
+    .blog-dtl-img
+    {
+        margin-bottom: 10px;
+        padding: 10px 10px 0px 10px !important;
+    }
+    .blog-dtl h2,
+    .blog-dtl h3
+    {
+        font-size: 18px;
+    }
+    .contact-inner
+    {
+        padding: 25px 30px;
+        margin-bottom: 20px;
+        height: auto;
+        justify-content: flex-start;
+    }
+    .contact-form-inner
+    {
+        margin-top: 30px;
+    }
+    .contact-form-inner
+    {
+        height: auto !important;
+    }
+    .contact-form-inner
+    {
+        padding: 20px !important;
+    }
+    .contact-form .login-form,
+    .contact-form.login-form .contact-form-inner
+    {
+        height: auto;
+    }
+    .privacy-main h2
+    {
+        font-size: 20px;
+    }
+    .attraction-main .detail-doctors.recent-post
+    {
+        margin-top: 0px;
+        margin-bottom: 20px;
+    }
 }
