--- a/src/app/pages/about/about.css
+++ b/src/app/pages/about/about.css
@@ -120,3 +120,54 @@
 {
     margin-top: 20px;
 }
+@media only screen and (min-width: 768px) and (max-width: 1024px)
+{
+    .about-feture-info
+    {
+        position: initial;
+        margin-top: 25px;
+        border-radius: 20px;
+        background-image: initial;
+        background-color: #676767;
+    }
+    .about-feture-info-main
+    {
+        padding: 20px 35px;
+    }
+    .about-feture-dtl
+    {
+        margin: 10px 0px;
+    }
+}
+@media screen and (max-width: 767px)
+{
+    .about-feture-info
+    {
+        position: initial;
+        background-image: initial;
+        background-color: #6b6b6b;
+        border-radius: 15px;
+        margin-top: 20px;
+    }
+    .oue-vision
+    {
+        padding: 0px;
+    }
+    .about-feture-info-main
+    {
+        padding: 20px;
+    }
+    .about-feture-dtl img
+    {
+        width: 42px;
+    }
+    .about-feture-inner h5
+    {
+        font-size: 18px;
+        margin-bottom: 0px;
+    }
+    .about-feture-dtl
+    {
+        margin: 10px 0px;
+    }
+}
