--- a/src/app/pages/associate-hospital/associate-hospital.html
+++ b/src/app/pages/associate-hospital/associate-hospital.html
@@ -1,7 +1,7 @@
 <section class="inner-banner">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="inner-baner-dtl position-relative text-center">
                     <img [src]="'assets/images/associate-hospital.png'" class="w-100 img-fluid rounded-5" />
                     <div class="inner-heading">
@@ -20,7 +20,7 @@
 <section class="card-list-main ptc-80">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 <div class="main-head text-center mbc-50">
                     <h2>Our Associate Hospitals</h2>
                     <p>Discover our trusted network of hospitals providing world-class facilities.</p>
@@ -31,7 +31,7 @@
         <div *ngIf="loading" class="text-center">Loading hospitals...</div>
 
         <div class="row" *ngIf="!loading && hospitals.length">
-            <div *ngFor="let h of hospitals" class="col-md-4 mb-4">
+            <div *ngFor="let h of hospitals" class="col-lg-4 col-md-6 mb-4">
                 <div class="user-card hospital-card">
                     <div class="card-inner">
                         <div class="user-card-img">
