--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,7 +1,7 @@
 <section class="inner-banner">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="inner-baner-dtl position-relative text-center">
                     <!-- Banner Image -->
                     <img [src]="'assets/images/login.png'" class="w-100 img-fluid rounded-5" />
@@ -21,10 +21,10 @@
 <section class="contact-form login-form ptc-80">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <img [src]="'assets/images/contact.png'" class="img-fluid w-100 rounded-4" />
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="contact-form-inner">
                     <h5>Login</h5>
                     <p>Sign Into Your Account</p>
